2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* configure.in (BUILD_PTHREAD_SUPPORT): New Automake
	conditional.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* Makefile.am (EXTRA_DIST): Remove `ANON-CVS' and `SNAPSHOTS'.

2008-03-12  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (AC_CONFIG_FILES): Add emacs/Makefile and
	ice-9/debugging/Makefile.

	* Makefile.am (SUBDIRS): Add emacs.

2008-02-23  Neil Jerram  <neil@ossau.uklinux.net>

	* FAQ: New file.

	* Makefile.am (EXTRA_DIST): Add FAQ

2008-02-22  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Check whether `strncasecmp' is declared.

2008-02-16  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.4 released.

	* GUILE-VERSION (LIBGUILE_INTERFACE_REVISION): Increment.
	(GUILE_MICRO_VERSION): Increment.

	* configure.in (GUILE_CFLAGS): Include `$CPPFLAGS' since they
	may include required `-I' flags (e.g., `-I/path/to/gmp'), so
	that "guile-config compile" reports all the needed flags.

2008-02-15  Neil Jerram  <neil@ossau.uklinux.net>

	* autogen.sh: Copy versions of config.guess and config.sub from
	Guile CVS to build-aux and guile-readline.

2008-02-14  Neil Jerram  <neil@ossau.uklinux.net>

	* HACKING: Note need for libtool >= 1.5.26.

	* config.rpath, build-aux/config.rpath: Updated to latest upstream
	version.

	* config.guess, config.sub: 2008-01-07 versions added to Guile
	CVS, to ensure that Guile developers are using new enough versions
	(in particular for AIX 6.1 support).

2008-02-11  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (--without-64-calls): Use AC_MSG_CHECKING and
	AC_MSG_RESULT instead of just echo.
	(GUILE_I): New programs to try using _Complex_I or 1.0fi for the
	imaginary unit.

2008-02-06  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in: Default to --without-64-calls for
	powerpc-ibm-aix*.  Thanks to Rainer Tammer for reporting that the
	64 calls are a problem on that OS.

2008-02-06  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention Sun Studio compilation fix.
