@@ -69,3 +69,4 @@ guile-config/guile-config
 guile-readline/guile-readline-config.h
 guile-readline/guile-readline-config.h.in
 TAGS
+guile-1.8.pc
