@@ -31,12 +31,15 @@ bin_SCRIPTS = guile-tools
 
 include_HEADERS = libguile.h
 
-EXTRA_DIST = LICENSE HACKING GUILE-VERSION FAQ
+EXTRA_DIST = LICENSE HACKING GUILE-VERSION FAQ guile-1.8.pc.in
 
 TESTS = check-guile
 
 ACLOCAL_AMFLAGS = -I guile-config
 
 DISTCLEANFILES = check-guile.log
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = guile-1.8.pc
 
 # Makefile.am ends here
